@@ -181,7 +181,9 @@ ECM options:
  -H --ecm-report-time <sec> | Report each <sec> how much ECMs and CWs have been
                             .   processed/skipped. Set <sec> to 0 to disable
                             .   the reports. Default: 60 sec
- -G --ecm-irdeto-type <int> | Process IRDETO ECMs with type X /0-3/. Default: 0
+ -G --ecm-irdeto-type <int> | Process IRDETO ECMs with index X /0-255/
+                            .   It is better to use --ecm-irdeto-chid option!
+ -2 --ecm-irdeto-chid <int> | Set CHID to filter Irdeto ECMs (Default: 0x0000).
  -K --ecm-no-log            | Disable ECM and code words logging.
  -J --cw-warn-time <sec>    | Warn if no valid code word has been received.
                             .   Set <sec> to 0 to disable. Default: 60 sec
@@ -265,6 +267,11 @@ Examples:
    # Send ECM from file
    tsdecrypt --ecm-file ecm.txt --caid 0x5581 --input-service 12345 \
        --camd-server example.com
+
+   # Decrypt IRDETO stream from Raduga (CHID == 0x0015)
+   tsdecrypt --input 239.0.50.11:5000 --output 239.78.78.78:5000 \
+             --camd-server example.com \
+             --ca-system IRDETO --caid 0x0652 --ecm-irdeto-chid 0x0015
 
 OSCAM cs378x configuration
 ==========================
